@@ -45,65 +45,27 @@ __warndecl (__warn_memset_zero_len,
 #endif
 
 
-#ifdef __cplusplus
 __extern_always_inline void *
 __NTH (memcpy (void *__restrict __dest, __const void *__restrict __src,
 	       size_t __len))
 {
   return __builtin___memcpy_chk (__dest, __src, __len, __bos0 (__dest));
 }
-#else
-# define memcpy(dest, src, len) \
-  ((__bos0 (dest) != (size_t) -1)					\
-   ? __builtin___memcpy_chk (dest, src, len, __bos0 (dest))		\
-   : __memcpy_ichk (dest, src, len))
-static __always_inline void *
-__NTH (__memcpy_ichk (void *__restrict __dest, __const void *__restrict __src,
-		      size_t __len))
-{
-  return __builtin___memcpy_chk (__dest, __src, __len, __bos0 (__dest));
-}
-#endif
 
-#ifdef __cplusplus
 __extern_always_inline void *
 __NTH (memmove (void *__restrict __dest, __const void *__restrict __src,
 		size_t __len))
 {
   return __builtin___memmove_chk (__dest, __src, __len, __bos0 (__dest));
 }
-#else
-# define memmove(dest, src, len) \
-  ((__bos0 (dest) != (size_t) -1)					\
-   ? __builtin___memmove_chk (dest, src, len, __bos0 (dest))		\
-   : __memmove_ichk (dest, src, len))
-static __always_inline void *
-__NTH (__memmove_ichk (void *__dest, __const void *__src, size_t __len))
-{
-  return __builtin___memmove_chk (__dest, __src, __len, __bos0 (__dest));
-}
-#endif
 
 #ifdef __USE_GNU
-# ifdef __cplusplus
 __extern_always_inline void *
 __NTH (mempcpy (void *__restrict __dest, __const void *__restrict __src,
 		size_t __len))
 {
   return __builtin___mempcpy_chk (__dest, __src, __len, __bos0 (__dest));
 }
-# else
-#  define mempcpy(dest, src, len) \
-  ((__bos0 (dest) != (size_t) -1)					\
-   ? __builtin___mempcpy_chk (dest, src, len, __bos0 (dest))		\
-   : __mempcpy_ichk (dest, src, len))
-static __always_inline void *
-__NTH (__mempcpy_ichk (void *__restrict __dest,
-		       __const void *__restrict __src, size_t __len))
-{
-  return __builtin___mempcpy_chk (__dest, __src, __len, __bos0 (__dest));
-}
-# endif
 #endif
 
 
@@ -112,7 +74,6 @@ __NTH (__mempcpy_ichk (void *__restrict __dest,
    especially problematic if the intended fill value is zero.  In this
    case no work is done at all.  We detect these problems by referring
    non-existing functions.  */
-#ifdef __cplusplus
 __extern_always_inline void *
 __NTH (memset (void *__dest, int __ch, size_t __len))
 {
@@ -123,103 +84,43 @@ __NTH (memset (void *__dest, int __ch, size_t __len))
     }
   return __builtin___memset_chk (__dest, __ch, __len, __bos0 (__dest));
 }
-#else
-# define memset(dest, ch, len) \
-  (__builtin_constant_p (len) && (len) == 0				      \
-   ? (__warn_memset_zero_len (), (void) (ch), (void) (len), (void *) (dest))  \
-   : ((__bos0 (dest) != (size_t) -1)					      \
-      ? __builtin___memset_chk (dest, ch, len, __bos0 (dest))		      \
-      : __memset_ichk (dest, ch, len)))
-static __always_inline void *
-__NTH (__memset_ichk (void *__dest, int __ch, size_t __len))
-{
-  return __builtin___memset_chk (__dest, __ch, __len, __bos0 (__dest));
-}
-#endif
 
 #ifdef __USE_BSD
-# ifdef __cplusplus
 __extern_always_inline void
 __NTH (bcopy (__const void *__restrict __src, void *__restrict __dest,
 	      size_t __len))
 {
-  __builtin___memmove_chk (__dest, __src, __len, __bos0 (__dest));
+  (void) __builtin___memmove_chk (__dest, __src, __len, __bos0 (__dest));
 }
+
 __extern_always_inline void
 __NTH (bzero (void *__dest, size_t __len))
 {
-  __builtin___memset_chk (__dest, '\0', __len, __bos0 (__dest));
+  (void) __builtin___memset_chk (__dest, '\0', __len, __bos0 (__dest));
 }
-# else
-#  define bcopy(src, dest, len) ((void) \
-  ((__bos0 (dest) != (size_t) -1)					\
-   ? __builtin___memmove_chk (dest, src, len, __bos0 (dest))		\
-   : __memmove_ichk (dest, src, len)))
-#  define bzero(dest, len) ((void) \
-  ((__bos0 (dest) != (size_t) -1)					\
-   ? __builtin___memset_chk (dest, '\0', len, __bos0 (dest))		\
-   : __memset_ichk (dest, '\0', len)))
-# endif
 #endif
 
-#ifdef __cplusplus
 __extern_always_inline char *
 __NTH (strcpy (char *__restrict __dest, __const char *__restrict __src))
 {
   return __builtin___strcpy_chk (__dest, __src, __bos (__dest));
 }
-#else
-# define strcpy(dest, src) \
-  ((__bos (dest) != (size_t) -1)					\
-   ? __builtin___strcpy_chk (dest, src, __bos (dest))			\
-   : __strcpy_ichk (dest, src))
-static __always_inline char *
-__NTH (__strcpy_ichk (char *__restrict __dest, __const char *__restrict __src))
-{
-  return __builtin___strcpy_chk (__dest, __src, __bos (__dest));
-}
-#endif
 
 #ifdef __USE_GNU
-# ifdef __cplusplus
 __extern_always_inline char *
 __NTH (stpcpy (char *__restrict __dest, __const char *__restrict __src))
 {
   return __builtin___stpcpy_chk (__dest, __src, __bos (__dest));
 }
-# else
-#  define stpcpy(dest, src) \
-  ((__bos (dest) != (size_t) -1)					\
-   ? __builtin___stpcpy_chk (dest, src, __bos (dest))			\
-   : __stpcpy_ichk (dest, src))
-static __always_inline char *
-__NTH (__stpcpy_ichk (char *__restrict __dest, __const char *__restrict __src))
-{
-  return __builtin___stpcpy_chk (__dest, __src, __bos (__dest));
-}
-# endif
 #endif
 
 
-#ifdef __cplusplus
 __extern_always_inline char *
 __NTH (strncpy (char *__restrict __dest, __const char *__restrict __src,
 		size_t __len))
 {
   return __builtin___strncpy_chk (__dest, __src, __len, __bos (__dest));
 }
-#else
-# define strncpy(dest, src, len) \
-  ((__bos (dest) != (size_t) -1)					\
-   ? __builtin___strncpy_chk (dest, src, len, __bos (dest))		\
-   : __strncpy_ichk (dest, src, len))
-static __always_inline char *
-__NTH (__strncpy_ichk (char *__restrict __dest, __const char *__restrict __src,
-		       size_t __len))
-{
-  return __builtin___strncpy_chk (__dest, __src, __len, __bos (__dest));
-}
-#endif
 
 // XXX We have no corresponding builtin yet.
 extern char *__stpncpy_chk (char *__dest, __const char *__src, size_t __n,
@@ -238,41 +139,16 @@ __NTH (stpncpy (char *__dest, __const char *__src, size_t __n))
 }
 
 
-#ifdef __cplusplus
 __extern_always_inline char *
 __NTH (strcat (char *__restrict __dest, __const char *__restrict __src))
 {
   return __builtin___strcat_chk (__dest, __src, __bos (__dest));
 }
-#else
-# define strcat(dest, src) \
-  ((__bos (dest) != (size_t) -1)					\
-   ? __builtin___strcat_chk (dest, src, __bos (dest))			\
-   : __strcat_ichk (dest, src))
-static __always_inline char *
-__NTH (__strcat_ichk (char *__restrict __dest, __const char *__restrict __src))
-{
-  return __builtin___strcat_chk (__dest, __src, __bos (__dest));
-}
-#endif
 
 
-#ifdef __cplusplus
 __extern_always_inline char *
 __NTH (strncat (char *__restrict __dest, __const char *__restrict __src,
 		size_t __len))
 {
   return __builtin___strncat_chk (__dest, __src, __len, __bos (__dest));
 }
-#else
-# define strncat(dest, src, len) \
-  ((__bos (dest) != (size_t) -1)					\
-   ? __builtin___strncat_chk (dest, src, len, __bos (dest))		\
-   : __strncat_ichk (dest, src, len))
-static __always_inline char *
-__NTH (__strncat_ichk (char *__restrict __dest, __const char *__restrict __src,
-		       size_t __len))
-{
-  return __builtin___strncat_chk (__dest, __src, __len, __bos (__dest));
-}
-#endif
